--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Document</title>
   </head>
   <body>
-    <header>Date, Clock</header>
+    <h1 class="clock">00:00</h1>
     <input type="color" />
+    <input class="clickbutton" type="button" value="click" />
 
     <form class="form">
       <div class="timetable">
@@ -171,6 +172,7 @@
     </form>
 
     <script src="app.js"></script>
+    <script src="clock.js"></script>
   </body>
 </html>
 
