--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1 class="clock">00:00</h1>
+    <span class="date">01/01</span>
     <input type="color" />
     <input class="clickbutton" type="button" value="click" />
 
@@ -165,9 +166,10 @@
 
       <div class="videomemo">
         <form>
-          <input class="note" type="text" />
-          <input type="submit" value="Save" />
+          <textarea class="note"></textarea>
         </form>
+        <input type="submit" value="Save" />
+        <input class="timestamp" type="button" value="TimeStamp" />
       </div>
     </form>
 
