--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <h1 class="clock">00:00</h1>
     <span class="date">01/01</span>
+    <span class="day">day</span>
     <input type="color" />
     <input class="clickbutton" type="button" value="click" />
 
@@ -170,6 +171,7 @@
         </form>
         <input type="submit" value="Save" />
         <input class="timestamp" type="button" value="TimeStamp" />
+        <input class="colorstamp" type="button" value="ColorStamp" />
       </div>
     </form>
 
