--- a/index.html
+++ b/index.html
@@ -166,12 +166,11 @@
       </div>
 
       <div class="videomemo">
-        <form>
-          <textarea class="note"></textarea>
-        </form>
-        <input type="submit" value="Save" />
+        <div class="note" contenteditable="true"></div>
+
+        <input class="save" type="submit" value="Save" />
         <input class="timestamp" type="button" value="TimeStamp" />
-        <input class="colorstamp" type="button" value="ColorStamp" />
+        <input class="colorstamp" type="checkbox" value="ColorStamp" />
       </div>
     </form>
 
