--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
         <input class="save" type="submit" value="Save" />
         <input class="timestamp" type="button" value="TimeStamp" />
-        <input class="colorstamp" type="checkbox" value="ColorStamp" />
+        <input class="colorstamp" type="button" value="ColorStamp" />
       </div>
     </form>
 
