--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gowun+Batang&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Document</title>
   </head>
   <body>
@@ -16,49 +23,55 @@
     </div>
     <span class="date">01/01</span>
     <span class="day">day</span>
-    <input type="color" />
+    <input type="color" value="1f3a8" />
     <input class="clickbutton" type="button" value="click" />
 
     <form class="form">
       <div class="timetable">
         <div class="time">
-          <div>6:00~7:00</div>
+          <div>6</div>
 
-          <div>7:00~8:00</div>
+          <div>7</div>
 
-          <div>8:00~9:00</div>
+          <div>8</div>
 
-          <div>9:00~10:00</div>
+          <div>9</div>
 
-          <div>10:00~11:00</div>
+          <div>10</div>
 
-          <div>11:00~12:00</div>
+          <div>11</div>
 
-          <div>12:00~13:00</div>
+          <div>12</div>
 
-          <div>13:00~14:00</div>
+          <div>13</div>
 
-          <div>14:00~15:00</div>
+          <div>14</div>
 
-          <div>15:00~16:00</div>
+          <div>15</div>
 
-          <div>16:00~17:00</div>
+          <div>16</div>
 
-          <div>17:00~18:00</div>
+          <div>17</div>
 
-          <div>18:00~19:00</div>
+          <div>18</div>
 
-          <div>19:00~20:00</div>
+          <div>19</div>
 
-          <div>20:00~21:00</div>
+          <div>20</div>
 
-          <div>21:00~22:00</div>
+          <div>21</div>
+          <div>22</div>
 
-          <div>22:00~23:00</div>
-
-          <div>23:00~24:00</div>
+          <div>23</div>
+          <div>24</div>
         </div>
         <div class="box">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
           <div></div>
           <div></div>
           <div></div>
