--- a/index.html
+++ b/index.html
@@ -16,54 +16,36 @@
   </head>
   <body>
     <div class="clockquotes">
-      <div class="clock">00:00</div>
       <div class="quotes">
         "필 꽃은 스스로 피어난다. 마음을 다해 지금을 살자."
       </div>
+      <div class="clock">00:00</div>
     </div>
     <span class="date">01/01</span>
     <span class="day">day</span>
-    <input type="color" value="1f3a8" />
-    <input class="clickbutton" type="button" value="click" />
 
     <form class="form">
       <div class="timetable">
         <div class="time">
           <div>6</div>
-
           <div>7</div>
-
           <div>8</div>
-
           <div>9</div>
-
           <div>10</div>
-
           <div>11</div>
-
           <div>12</div>
-
-          <div>13</div>
-
-          <div>14</div>
-
-          <div>15</div>
-
-          <div>16</div>
-
-          <div>17</div>
-
-          <div>18</div>
-
-          <div>19</div>
-
-          <div>20</div>
-
-          <div>21</div>
-          <div>22</div>
-
-          <div>23</div>
-          <div>24</div>
+          <div>1</div>
+          <div>2</div>
+          <div>3</div>
+          <div>4</div>
+          <div>5</div>
+          <div>6</div>
+          <div>7</div>
+          <div>8</div>
+          <div>9</div>
+          <div>10</div>
+          <div>11</div>
+          <div>12</div>
         </div>
         <div class="box">
           <div></div>
@@ -182,22 +164,20 @@
           <div></div>
         </div>
       </div>
-
-      <div class="memo">
-        <div class="note" contenteditable="true"></div>
-        <div class="example" contenteditable="true">
-          <input class="save" type="submit" value="Save" />
-          <input class="timestamp" type="button" value="TimeStamp" />
-        </div>
+      <div class="tododiv">
+        <form class="todo-form">
+          <input type="text" placeholder=" Write a To Do " required />
+        </form>
+        <ul class="todo-list"></ul>
+      </div>
+      <div class="note" contenteditable="true"></div>
+      <div class="example" contenteditable="true">
+        <input class="save" type="submit" value="Save" />
+        <input class="timestamp" type="button" value="TimeStamp" />
+        <input class="color" type="color" />
+        <input class="clickbutton" type="button" value="color stamp" />
       </div>
     </form>
-
-    <div class="tododiv">
-      <form class="todo-form">
-        <input type="text" />
-      </form>
-      <ul id="todo-list"></ul>
-    </div>
 
     <script src="js/app.js"></script>
     <script src="js/clock.js"></script>
