--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <span class="date">01/01</span>
     <span class="day">day</span>
 
-    <form class="form">
+    <div class="forms">
       <div class="timetable">
         <div class="time">
           <div>6</div>
@@ -166,18 +166,19 @@
       </div>
       <div class="tododiv">
         <form class="todo-form">
-          <input type="text" placeholder=" Write a To Do " required />
+          <input type="text" placeholder="To Do List" required />
         </form>
         <ul class="todo-list"></ul>
       </div>
       <div class="note" contenteditable="true"></div>
-      <div class="example" contenteditable="true">
-        <input class="save" type="submit" value="Save" />
-        <input class="timestamp" type="button" value="TimeStamp" />
-        <input class="color" type="color" />
-        <input class="clickbutton" type="button" value="color stamp" />
-      </div>
-    </form>
+    </div>
+
+    <div class="example" contenteditable="true">
+      <input class="save" type="submit" value="\f26e" />
+      <input class="timestamp" type="button" value="TimeStamp" />
+      <input class="color" type="color" />
+      <input class="clickbutton" type="button" value="color stamp" />
+    </div>
 
     <script src="js/app.js"></script>
     <script src="js/clock.js"></script>
@@ -185,6 +186,11 @@
     <script src="js/quotes.js"></script>
     <script src="js/note.js"></script>
     <script src="js/todo.js"></script>
+    <script src="js/background.js"></script>
+    <script
+      src="https://kit.fontawesome.com/6478f529f2.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
 
