--- a/index.html
+++ b/index.html
@@ -174,10 +174,14 @@
     </div>
 
     <div class="example" contenteditable="true">
-      <input class="save" type="submit" value="\f26e" />
-      <input class="timestamp" type="button" value="TimeStamp" />
-      <input class="color" type="color" />
-      <input class="clickbutton" type="button" value="color stamp" />
+      <button class="save"><i class="fas fa-save"></i></button>
+      <button class="timestamp"><i class="fas fa-clock"></i></button>
+      <input class="palette" type="color" size="40" /><i
+        class="fas fa-palette"
+      ></i>
+      <button class="clickbutton" type="button">
+        <i class="fas fa-paint-brush"></i>
+      </button>
     </div>
 
     <script src="js/app.js"></script>
