--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
     <div class="example" contenteditable="true">
       <button class="save"><i class="fas fa-save"></i></button>
       <button class="timestamp"><i class="fas fa-clock"></i></button>
-      <input class="palette" type="color" size="40" /><i
-        class="fas fa-palette"
-      ></i>
+      <button>
+        <input class="palette" type="color" />
+      </button>
       <button class="clickbutton" type="button">
         <i class="fas fa-paint-brush"></i>
       </button>
