--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       <div class="quotes">
         "필 꽃은 스스로 피어난다. 마음을 다해 지금을 살자."
       </div>
-      <div class="clock">00:00</div>
+      <div class="clockweather">
+        <div class="clock">00:00</div>
+        <div class="weather"><span></span><span>/</span><span></span></div>
+      </div>
     </div>
     <span class="date">01/01</span>
     <span class="day">day</span>
@@ -191,6 +194,7 @@
     <script src="js/note.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/weather.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
