--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <title>Document</title>
   </head>
   <body>
+    <form class="hidden" id="login-form">
+      <input
+        required
+        maxlength="15"
+        type="text"
+        placeholder="What is your name?"
+      />
+      <input type="submit" value="Log In" />
+    </form>
+    <h1 class="hidden" id="greeting"></h1>
     <div class="clockquotes">
       <div class="quotes">
         "필 꽃은 스스로 피어난다. 마음을 다해 지금을 살자."
@@ -195,6 +205,7 @@
     <script src="js/todo.js"></script>
     <script src="js/background.js"></script>
     <script src="js/weather.js"></script>
+    <script src="js/greeting.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
