--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="clockweather">
         <div class="clock">00:00</div>
-        <div class="weather"><span></span><span>/</span><span></span></div>
+        <div class="weather"><span></span><span></div>
       </div>
     </div>
     <span class="date">01/01</span>
@@ -182,6 +182,10 @@
           <input type="text" placeholder="To Do List" required />
         </form>
         <ul class="todo-list"></ul>
+        <form class="schedule-form">
+          <input type="text" placeholder ="Schedule" required/>
+          <ul class="schedule-list"></ul>
+        </form>
       </div>
       <div class="note" contenteditable="true"></div>
     </div>
@@ -206,6 +210,7 @@
     <script src="js/background.js"></script>
     <script src="js/weather.js"></script>
     <script src="js/greeting.js"></script>
+    <script src="js/schedule.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
