--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
     <script src="js/weather.js"></script>
     <script src="js/greeting.js"></script>
     <script src="js/schedule.js"></script>
+    <script src="js/canvas.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
