--- a/index.html
+++ b/index.html
@@ -196,9 +196,10 @@
       <button>
         <input class="palette" type="color" />
       </button>
-      <button class="clickbutton" type="button">
+      <button class="clickbutton">
         <i class="fas fa-paint-brush"></i>
       </button>
+      <button class="sticker-selector"></button>
     </div>
 
     <script src="js/app.js"></script>
