--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     </div>
 
     <div class="example" contenteditable="true">
-      <button class="save"><i class="fas fa-save"></i></button>
+      <button class="save" type="submit"><i class="fas fa-save"></i></button>
       <button class="timestamp"><i class="fas fa-clock"></i></button>
       <button>
         <input class="palette" type="color" />
