--- a/index.html
+++ b/index.html
@@ -15,16 +15,6 @@
     <title>Document</title>
   </head>
   <body>
-    <form class="hidden" id="login-form">
-      <input
-        required
-        maxlength="15"
-        type="text"
-        placeholder="What is your name?"
-      />
-      <input type="submit" value="Log In" />
-    </form>
-    <h1 class="hidden" id="greeting"></h1>
     <div class="clockquotes">
       <div class="quotes">
         "필 꽃은 스스로 피어난다. 마음을 다해 지금을 살자."
@@ -35,7 +25,7 @@
       </div>
     </div>
     <span class="date">01/01</span>
-    <span class="day">day</span>
+    
 
     <div class="forms">
       <div class="timetable">
@@ -200,6 +190,7 @@
         <i class="fas fa-paint-brush"></i>
       </button>
       <button class="sticker-selector"></button>
+      <button class="sticker-off">on</button>
     </div>
 
     <script src="js/app.js"></script>
@@ -210,7 +201,6 @@
     <script src="js/todo.js"></script>
     <script src="js/background.js"></script>
     <script src="js/weather.js"></script>
-    <script src="js/greeting.js"></script>
     <script src="js/schedule.js"></script>
     <script src="js/canvas.js"></script>
     <script
