--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <i class="fas fa-paint-brush"></i>
       </button>
       <button class="sticker-selector"></button>
-      <button class="sticker-off">on</button>
+      <button class="sticker-off">off</button>
     </div>
 
     <script src="js/app.js"></script>
@@ -203,6 +203,7 @@
     <script src="js/weather.js"></script>
     <script src="js/schedule.js"></script>
     <script src="js/canvas.js"></script>
+    <script src="js/stickeronoff.js"></script>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
