--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <title>Document</title>
   </head>
   <body>
+   <a class ="gotemplate" href = "template.html"><i class="fas fa-arrow-left"></i></a>
+
     <div class="clockquotes">
+
       <div class="quotes">
         "필 꽃은 스스로 피어난다. 마음을 다해 지금을 살자."
       </div>
@@ -181,6 +184,8 @@
     </div>
 
     <div class="example" contenteditable="true">
+      <button><i class="fas fa-arrow-left"></i></button>
+
       <button class="save" type="submit"><i class="fas fa-save"></i></button>
       <button class="timestamp"><i class="fas fa-clock"></i></button>
       <button>
